# ProtoInfo

./: CMakeLists.txt  conanfile.py  git-version.cmake  git_version.h.in  git_version.json.in  vs2019.bat
res/forms/: MainWindow.ui  SettingsWidget.ui
src/: MainWindow.cpp  MainWindow.h  MsvcAppender.cpp  MsvcAppender.h  SettingsWidget.cpp  SettingsWidget.h  main.cpp
src/model/files/: ProtoFileModel.cpp  ProtoFileModel.h
src/model/message/: ProtoMessageFieldItem.cpp  ProtoMessageFieldItem.h  ProtoMessageModel.cpp  ProtoMessageModel.h
src/model/type/: ProtoTypeModel.cpp  ProtoTypeModel.h  ProtoTypeModelFileItem.cpp  ProtoTypeModelFileItem.h  ProtoTypeModelItem.cpp  ProtoTypeModelItem.h  ProtoTypeModelMessageItem.cpp  ProtoTypeModelMessageItem.h  ProtoTypeModelRootItem.cpp  ProtoTypeModelRootItem.h
